deploy/kubernetes/overlays/volcengine/delete-market-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-collector
  namespace: banxia
$patch: delete
