deploy/kubernetes/overlays/volcengine/flink-jobmanager-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
  namespace: banxia
spec:
  template:
    spec:
      containers:
        - name: jobmanager
