deploy/kubernetes/overlays/volcengine/flink-taskmanager-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
  namespace: banxia
spec:
  template:
    spec:
      containers:
        - name: taskmanager
