deploy/kubernetes/overlays/volcengine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banxia-api
  namespace: banxia
  annotations:
    ingress.vke.volcengine.com/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    ingress.vke.volcengine.com/ssl-redirect: "true"
spec:
  ingressClassName: banxia-alb
  rules:
    - host: shanao.asia
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
